# wikibridge

./: .gitignore  .gitmodules  .oxlintrc.json  .prettierignore  .prettierrc.json  AGENTS.md  CODE_STYLE.md  CONTEXT.md  LICENSE  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md  README_CN.md  README_JA.md  README_KO.md  WikiBridge_汇报方案.md  bunfig.toml  daytona.ts  doc.md  docker-compose.yml  package-lock.json  (+8 more)
.changeset/: brave-cassettes-record.md  config.json
.github/: VOUCHED.td  pull_request_template.md
.github/workflows/: build.yml  ci.yml  close-stale-prs.yml  compliance-close.yml  deploy.yml  desktop-test.yml  docs-locale-sync.yml  duplicate-issues.yml  http-recorder-release.yml  nix-hashes.yml  pr-management.yml  pr-standards.yml  publish.yml  review.yml  test.yml
.opencode/: opencode.jsonc
.opencode.bak/agent/: triage.md
AGENT/: MEMORY.md
WHU-Beamer/: project_report.aux  project_report.nav  project_report.tex  project_report.toc  uml_architecture.tex
backend/: auth.py  deps.py  frps_manager.py  main.py  persist_config.py  plugin_handler.py  poller.py  script_renderer.py  user_persistence.py
bearfrp/: Doxyfile  LICENSE  NOTICE  README.md  SBOM.json  requirements.txt  开发文档.md
config/: allocatable_range.json
desktop/: .gitignore  HANDOFF.md  PACKAGING.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
desktop-frp/: index.html  package-lock.json
desktop-frp/src-tauri/: Cargo.toml  tauri.conf.json
desktop-frp/src-tauri/src/: api.rs  lib.rs  main.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
desktop/src-tauri/binaries/llm-wiki-server/: README.md
desktop/src-tauri/binaries/opencode/: README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: api.rs  lib.rs  local_service.rs  main.rs  sidecar.rs  source_text.rs  state.rs  wiki.rs
doc/: kb-mode.md  remain.md
extension/: popup.html  popup.js
infra/: console.ts  lake-destroy-prep.ts  lake.ts  monitoring.ts  stage.ts  stats.ts
llm_wiki/: .dockerignore  Dockerfile  README_CN.md  README_JA.md  README_KO.md  package.json  vite.config.ts
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
nix/: hashes.json  opencode.nix
opencode/: bunfig.toml  package.json  turbo.json
patches/: @modelcontextprotocol%2Fsdk@1.29.0.patch
perf/: test-suite.md
script/: beta.ts  publish.ts  triage-unassigned.ts  version.ts
scripts/: capture-manual-ui-screenshots.mjs  demo.mac.sh.tmpl  fetch-pdfium.sh  format-owned.mjs  frpc.linux.sh.tmpl  frpc.mac.sh.tmpl  frpc.win.ps1.tmpl  prepare-embedded-ui.ts  test-tasks.md  test-tasks.mjs
specs/: file-component-unification-plan.md  session-review-cross-diff-search-plan.md
src/: App.tsx  index.css  main-b.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/pdfium/: SHA256SUMS
src-tauri/src/: api_server.rs  clip_server.rs  lib.rs  panic_guard.rs  proxy.rs  tray.rs
src-tauri/src/commands/: claude_cli.rs  cli_resolver.rs  codex_cli.rs  extract_images.rs  file_sync.rs  fs.rs  mod.rs  project.rs  vectorstore.rs
tests/: generate_queries.py  generate_wiki.py  run_benchmark.py  run_benchmark_v2.py  run_benchmark_v3.py
(+714 files in other folders)
