[package]
name = "llm-wiki"
version = "0.3.1"
description = "LLM Wiki - A personal knowledge base for LLM concepts"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "llm_wiki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "llm-wiki"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-dialog = "2.7.0"
pdf-extract = "0.10.0"
tauri-plugin-store = "2.4.2"
tiny_http = "0.12"
zip = "2"
calamine = "0.34.0"
docx-rs = "0.4.20"
lancedb = "0.27.2"
# tokio provided by tauri runtime for async commands
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
# Unwind (not abort) so third-party parser panics can be caught at the
# Tauri command boundary via panic_guard and turned into errors. Slightly
# larger binary, but prevents single-file corruption from killing the app.
panic = "unwind"
strip = true
