[package]
name = "bearfrps-desktop"
version = "0.1.0"
description = "BearFrps Desktop"
authors = ["BearFrps Course Design Team"]
edition = "2021"

[lib]
name = "bearfrps_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bearfrps-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
url = "2.5.8"
