[package]
name = "wikibridge-desktop"
version = "0.1.0"
description = "WikiBridge Desktop"
authors = ["WikiBridge Team"]
edition = "2021"

[lib]
name = "wikibridge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wikibridge-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
pdfium-render = "0.9"
url = "2.5.8"
